--- a/app/src/main/res/layout/location_detail_fragment.xml
+++ b/app/src/main/res/layout/location_detail_fragment.xml
@@ -62,7 +62,8 @@
                         android:text="@string/open"
                         android:textColor="@color/colorTextGreeen"
                         android:textSize="@dimen/text_size_common_15"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:id="@+id/openCloseText"/>
 
                     <ImageView
                         android:layout_width="15dp"
@@ -81,242 +82,11 @@
                         android:textStyle="bold" />
                 </LinearLayout>
 
-                <LinearLayout
+
+                <ListView
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="@dimen/margin_common_10"
-                    android:background="@drawable/classes_bg"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".2"
-                        android:background="@color/colorPrimary"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="@string/mon"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:id="@+id/openTime1"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".8"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="XXXXXXXXXXXXXXX"
-                        android:textAllCaps="true"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/text_size_common_14"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="@dimen/margin_common_10"
-                    android:background="@drawable/classes_bg"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".2"
-                        android:background="@color/colorPrimary"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="@string/tue"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:id="@+id/openTime2"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".8"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="XXXXXXXXXXXXXXX"
-                        android:textAllCaps="true"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/text_size_common_14"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="@dimen/margin_common_10"
-                    android:background="@drawable/classes_bg"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".2"
-                        android:background="@color/colorPrimary"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="@string/wed"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:id="@+id/openTime3"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".8"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="XXXXXXXXXXXXXXX"
-                        android:textAllCaps="true"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/text_size_common_14"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="@dimen/margin_common_10"
-                    android:background="@drawable/classes_bg"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".2"
-                        android:background="@color/colorPrimary"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="@string/thus"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:id="@+id/openTime4"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".8"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="XXXXXXXXXXXXXXX"
-                        android:textAllCaps="true"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/text_size_common_14"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="@dimen/margin_common_10"
-                    android:background="@drawable/classes_bg"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".2"
-                        android:background="@color/colorPrimary"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="@string/fri"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:id="@+id/openTime5"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".8"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="XXXXXXXXXXXXXXX"
-                        android:textAllCaps="true"
-                        android:textColor="@android:color/black"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="@dimen/margin_common_10"
-                    android:background="@drawable/classes_bg"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".2"
-                        android:background="@color/colorPrimary"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="@string/sat"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:id="@+id/openTime6"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".8"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="XXXXXXXXXXXXXXX"
-                        android:textAllCaps="true"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/text_size_common_14"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="@dimen/margin_common_10"
-                    android:background="@drawable/classes_bg"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".2"
-                        android:background="@color/colorPrimary"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="@string/sun"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
-
-                    <com.ymca.CustomFont.PrimaryFontText
-                        android:id="@+id/openTime7"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".8"
-                        android:gravity="center"
-                        android:padding="@dimen/padding_common_8"
-                        android:text="XXXXXXXXXXXXXXX"
-                        android:textAllCaps="true"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/text_size_common_14"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:id="@+id/listViewWeekDays"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
