--- a/app/src/main/res/layout/donate_fragment.xml
+++ b/app/src/main/res/layout/donate_fragment.xml
@@ -32,7 +32,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight=".6"
-            android:src="@drawable/bt_donate"/>
+            android:src="@drawable/bt_donate"
+            android:id="@+id/donateButton"/>
     </LinearLayout>
 
     <com.ymca.CustomFont.PrimaryFontText
