--- a/app/src/main/res/layout/add_my_card_fragment.xml
+++ b/app/src/main/res/layout/add_my_card_fragment.xml
@@ -6,6 +6,19 @@
     android:orientation="vertical"
     android:weightSum="1">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="94dp"
+        android:orientation="horizontal"
+        android:background="@drawable/header_bg">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/bt_back_white"
+        android:padding="@dimen/padding_common_10"
+        android:id="@+id/backButton"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -34,7 +47,8 @@
                 android:textColorHint="@color/colorTextGray"
                 android:textSize="@dimen/text_size_common_16"
                 android:textStyle="bold"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -58,7 +72,7 @@
                 android:gravity="center"
                 android:hint="@string/enter_number"
                 android:inputType="number"
-                android:maxLength="12"
+                android:maxLength="14"
                 android:padding="@dimen/padding_common_8"
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/colorTextGray"
