--- a/app/src/main/res/layout/card_show_fragment.xml
+++ b/app/src/main/res/layout/card_show_fragment.xml
@@ -8,6 +8,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="94dp"
+        android:background="@drawable/header_bg"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="@dimen/padding_common_10"
+            android:src="@drawable/bt_back_white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".98"
         android:orientation="vertical"
@@ -74,7 +88,7 @@
                         android:id="@+id/barCodeImg"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
-                        android:layout_weight=".8"/>
+                        android:layout_weight=".8" />
 
                     <com.ymca.CustomFont.SecondaryFontText
                         android:id="@+id/barCodeNo"
@@ -84,8 +98,7 @@
                         android:padding="@dimen/padding_common_5"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/text_size_common_13"
-                        app:fontNames="@string/custom_secondary_font"
-                        />
+                        app:fontNames="@string/custom_secondary_font" />
                 </LinearLayout>
             </LinearLayout>
 
