--- a/app/src/main/res/layout/custom_layout_back_button.xml
+++ b/app/src/main/res/layout/custom_layout_back_button.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
 
     <LinearLayout
         android:id="@+id/customLayout"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:gravity="center"
         android:padding="@dimen/padding_common_8"
