--- a/app/src/main/res/layout/dialoh_layout.xml
+++ b/app/src/main/res/layout/dialoh_layout.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/padding_common_20"
-    android:background="@color/colorTransParent">
+ >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/padding_common_5"
-        android:background="@drawable/layout_black_border">
+        android:background="@color/colorPrimary">
 
         <LinearLayout
             android:id="@+id/callNumer1"
@@ -22,15 +23,15 @@
             android:orientation="vertical"
             android:padding="@dimen/padding_common_10">
 
-            <com.ymca.CustomFont.PrimaryFontText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DOWNTOWN"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_common_18"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
-            <com.ymca.CustomFont.PrimaryFontText
+            <TextView
                 android:id="@+id/nember1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -52,7 +53,7 @@
             android:orientation="vertical"
             android:padding="@dimen/padding_common_10">
 
-            <com.ymca.CustomFont.PrimaryFontText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="KERASOTES"
@@ -60,7 +61,7 @@
                 android:textSize="@dimen/text_size_common_18"
                 android:textStyle="bold" />
 
-            <com.ymca.CustomFont.PrimaryFontText
+            <TextView
                 android:id="@+id/nember2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
