--- a/app/src/main/res/layout/location_detail_fragment.xml
+++ b/app/src/main/res/layout/location_detail_fragment.xml
@@ -13,7 +13,7 @@
 
         <ScrollView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:fillViewport="true"
             android:scrollbars="none"
             android:scrollbarStyle="insideOverlay">
@@ -85,7 +85,7 @@
 
                 <ListView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:id="@+id/listViewWeekDays"/>
 
                 <LinearLayout
@@ -104,7 +104,8 @@
                         android:textAllCaps="false"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/text_size_common_15"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:id="@+id/callButton"/>
 
                     <ImageView
                         android:layout_width="0dp"
@@ -119,7 +120,8 @@
                         android:textAllCaps="false"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/text_size_common_15"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:id="@+id/emailButton" />
                 </LinearLayout>
 
                 <View
